<resources>
    <string name="app_name">MyDailyTime</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="dlg_input_title">Input a title</string>
    <string name="dlg_warn_stop_task">Do you want to stop your work？</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="q0">Never put off till tomorrow what may be done today.</string>
    <string name="q1">Procrastination is the thief of time. </string>
    <string name="q2">One of these days is none of these days. </string>
    <string name="q3">Tomorrow never comes. </string>
    <string name="q4">Time lost can not be recalled. </string>
    <string name="q5">Time is life and when the idle man kills time, he kills himself. </string>
    <string name="q6">"Time stays not the fool's leisure. "</string>
    <string name="q7">Time and tide wait for no man.</string>
    <string name="q8">Time is money.</string>
    <string name="q9">A day is a miniature of eternity. </string>
</resources>
