<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/bg_dlg"
              android:padding="@dimen/dlg_padding"
              android:layout_margin="0dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/dlg_warn_stop_task"
        android:textColor="#000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:textColor="@color/text_color"
            android:paddingLeft="@dimen/button_paddingLR"
            android:paddingRight="@dimen/button_paddingLR"
            android:paddingTop="@dimen/button_paddingTB"
            android:paddingBottom="@dimen/button_paddingTB"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:textColor="@color/text_color"
            android:layout_marginLeft="40dp"
            android:paddingLeft="@dimen/button_paddingLR"
            android:paddingRight="@dimen/button_paddingLR"
            android:paddingTop="@dimen/button_paddingTB"
            android:paddingBottom="@dimen/button_paddingTB"
            android:textSize="@dimen/btn_text_size"
            android:text="@string/confirm"/>
    </LinearLayout>

</LinearLayout>