<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="18sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            >
            <com.carlosdelachica.timelydigitalclock.TimelyDigitalClockView
                android:id="@+id/clockView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:dg_secondsTextSize="40sp"
                app:dg_secondsTextStrokeWidth="1dp"
                app:dg_textColor="#000"
                app:dg_textSize="70sp"
                app:dg_textStrokeWidth="3dp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >
            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:padding="@dimen/button_paddingLR"
                android:text="@string/start"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/text_color"/>


            <TextView
                android:id="@+id/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:padding="@dimen/button_paddingLR"
                android:text="@string/stop"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/text_color"/>


            <TextView
                android:id="@+id/resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:padding="@dimen/button_paddingLR"
                android:text="@string/resume"
                android:textSize="@dimen/btn_text_size"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>